<resources>
    <string name="app_name">Mitra Fast</string>
    <string name="default_notification_channel_id" translatable="false">MitraFast_1</string>
    <string name="dynamic_links_uri_prefix" translatable="false">https://mitrafast.page.link</string>
    <string name="errorRequired">Required</string>
    <string name="error_validation_code_message">Validation code should be 4 numbers</string>
    <string name="errorWrongPhoneNumberMessage">Phone number should be at least</string>
    <string name="errorPasswordMatchingMessage">Password not matched</string>
    <string name="errorInvalidEmail">Invalid email</string>
    <string name="errorWrongStartPhoneNumberMessage">Phone number should start with</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="dismiss">Dismiss</string>
    <string name="next">Next</string>
    <string name="skip">skip</string>
    <string name="save">Save</string>
    <string name="login_first_message">Login first</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="iban_number_should_be_22_digit">Iban number should be 22 digit</string>
    <string name="working">Working</string>
    <string name="locationUpdateMessage">Location updates category is running</string>
    <string name="permissionMessage">Allow permissions</string>
    <string name="available">Available</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="main">Home</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="wallet">Wallet</string>
    <string name="cart">Cart</string>
    <string name="my_orders">My Orders</string>
    <string name="about_us">About us</string>
    <string name="contact_us">Contact us</string>
    <string name="faq">FAQ</string>
    <string name="saved_locations">Saved locations</string>
    <string name="distance">Distance</string>
    <string name="name">Name :</string>
    <string name="mobile_number">Mobile number</string>
    <string name="address">Address :</string>
    <string name="order_status">Order State</string>
    <string name="all_previous_orders">All previous orders</string>
    <string name="write_your_message">Write your message</string>
    <string name="sareei_is">What is sariee</string>
    <string name="send">Send</string>
    <string name="register_as_provider">Register as provider</string>
    <string name="bill_details">Bill details</string>
    <string name="collection_price">Collection price :</string>
    <string name="total">Total :</string>
    <string name="notes_for_restaurant">Notes for restaurant ?</string>
    <string name="apply">Apply</string>
    <string name="add_coupon">Add Coupon</string>
    <string name="arriving_time">Arriving Time</string>
    <string name="price_delivery">Delivery price</string>
    <string name="refuse">Refuse</string>
    <string name="accept">Accept</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="click_to_attach_pic">Click to attach the pictures</string>
    <string name="attach_identity_pic">Attach ID photo</string>
    <string name="car_info">2 - Vehicle information</string>
    <string name="account_owner_name">Account owner name</string>
    <string name="bank_type">Bank type</string>
    <string name="choose_bank">Choose the bank from the list</string>
    <string name="confirm_password">Confirm password</string>
    <string name="verification">Verification</string>
    <string name="please_enter_the_activation_code_sent_to_your_mobile_phone">Please enter the activation code sent to your mobile phone</string>
    <string name="dd_image">Add a picture</string>
    <string name="personal_information">Personal information</string>
    <string name="identity_num">ID Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="attach_licence_pic">Attach driving license</string>
    <string name="iban_num">IBAN number</string>
    <string name="membership_num">Membership No :</string>
    <string name="data_panel">Details panel</string>
    <string name="canceled_orders">Canceled orders</string>
    <string name="pending_orders">Pending orders</string>
    <string name="all_orders">All orders</string>
    <string name="activate">Enable</string>
    <string name="all_orders_list">All list of new orders</string>
    <string name="notifications">Notifications</string>
    <string name="completed_orders">Completed orders</string>
    <string name="last_order_state">Last order\'s state</string>
    <string name="ready_to_receive">ready to receive ypur order</string>
    <string name="disable">Disable</string>
    <string name="order_number">Order no.</string>
    <string name="client_order_details">Order details</string>
    <string name="click_go">Get directions</string>
    <string name="contact_with_client">Contact the client</string>
    <string name="deliver_cost">Deliver cost :</string>
    <string name="order_delivered">Order deliverd</string>
    <string name="submit_your_order">Submit your order</string>
    <string name="the_name_that_appears_to_the_customer">The name that appears to the customer</string>
    <string name="name_on_id">Name on ID</string>
    <string name="email">Email</string>
    <string name="order_details">Order details</string>
    <string name="ignore">Ignore</string>
    <string name="financial_movement">Financial movement</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="bank_account">Bank Account</string>
    <string name="total_purchases">Total purchases :</string>
    <string name="sareei_commission">Sareei commission :</string>
    <string name="payment_method">Payment method</string>
    <string name="order_date">Order date :</string>
    <string name="finance_side">Finance side</string>
    <string name="delete">Delete</string>
    <string name="ticketNo">Ticket no.</string>
    <string name="ticket_type">Ticket type</string>
    <string name="ticketState">Ticket state</string>
    <string name="the_message_has_been_sent_we_will_contact_you_soon_via_mail">The message has been sent. We will contact you soon via mail</string>
    <string name="main_page">Main page</string>
    <string name="continue_process">Continue process</string>
    <string name="send_register_request">Send register request</string>
    <string name="select_location">Select location</string>
    <string name="store_mobile_number">Store mobile number</string>
    <string name="owner_mobile_number">Owner mobile number</string>
    <string name="commercial_registration_number">Commercial registration number</string>
    <string name="store_name_en">Store name (English)</string>
    <string name="store_name_ar">Store name (Arabic)</string>
    <string name="work_times">Work times</string>
    <string name="select_start_work_time">Select start work time</string>
    <string name="select_end_work_time">Select end work time</string>
    <string name="select_start_work_time_first">Select start work time first</string>
    <string name="resend_code"><u>Resend code</u></string>
    <string name="remaining">Remaining:</string>
    <string name="for_resend">For resending activation code</string>
    <string name="select_profile_image">Select profile image</string>
    <string name="profile_image_message">You Should Pick Profile Image</string>
    <string name="identity_image_message">You Should Pick Identity Image</string>
    <string name="driving_license_image_message">You Should Pick Driving License Image</string>
    <string name="car_insurance_image_message">You Should Pick Car Insurance Image</string>
    <string name="attach_a_copy_of_the_driving_licenses_the_form">Attach a copy of the driving licenses (the form)</string>
    <string name="membership_number">Membership number</string>
    <string name="finished_orders">Finished orders</string>
    <string name="log_out">Log out</string>
    <string name="not_approved_yet">Awaiting administration approval</string>
    <string name="attach_image">Attach image</string>
    <string name="select_ticket_type">Select ticket type</string>
    <string name="select_ticket_images">Select ticket images</string>
    <string name="open_new_ticket">Open new ticket</string>
    <string name="open_now">Open now</string>
    <string name="closed_now">Closed now</string>
    <string name="client_location">Client location</string>
    <string name="agent_waiting_message">Waiting for client response for your offer</string>
    <string name="select_cancel_order_reason">select cancel order reason</string>
    <string name="confirm_order_delivery">Confirm order delivery</string>
    <string name="order_has_been_delivered_successfully">Order has been delivered successfully</string>
    <string name="rate_client">Rate client</string>
    <string name="rate_agent">Rate agent</string>
    <string name="type">Type</string>
    <string name="size">Size</string>
    <string name="extras">Extras</string>
    <string name="choices">Choices</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="this_product_is_from_another_merchant">This product is from another merchant, Do you want to delete all cart products to add this product?</string>
    <string name="select_payment_method">Select payment method</string>
    <string name="select_delivery_location">Select delivery location</string>
    <string name="are_you_sure_you_want_to_delete_this_product">Are you sure you want to delete this product ?</string>
    <string name="discount_rate">Discount rate</string>
    <string name="discount_on_delivery_cost">Discount on delivery cost</string>
    <string name="add_location">Add Location</string>
    <string name="no_addresses">No Address</string>
    <string name="choose_a_delivery_location_or_add_a_new_location">Choose a delivery location or add a new location</string>
    <string name="location_address">Location address</string>
    <string name="complete_data">Complete Data</string>
    <string name="location_name">Location name</string>
    <string name="delete_from_addresses">Are you sure you want to delete from addresses?</string>
    <string name="cancel_order">Cancel order</string>
    <string name="client_waiting_message">Searching for the nearest representative to you, thank you for your request from SARIE</string>
    <string name="order_was_listed_successfully">Order was listed successfully</string>
    <string name="offers">Offers</string>
    <string name="others">Others</string>
    <string name="add_balance">Add balance</string>
    <string name="operations">operations</string>
    <string name="add_date">Add date</string>
    <string name="value">Value</string>
    <string name="insert_charge_amount">Insert charge amount</string>
    <string name="insert_amount"><font size="12">Balance to be shipped</font></string>
    <string name="message">Message</string>
    <string name="subject">Subject</string>
    <string name="add_new_ticket">Add new ticket</string>
    <string name="attach_attachment">Attach attachment</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_message">Enter a message</string>
    <string name="enter_your_mail">Enter your email</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="my_account">My account</string>
    <string name="orderNumber">order number :</string>
    <string name="enter_your_message_here">Enter your message here</string>
    <string name="phone">Phone :</string>
    <string name="Reporting_request">Reporting on request</string>
    <string name="nameBank">Name bank</string>
</resources>