<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/my_orders_ic"
            android:title="@string/my_orders" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile_ic"
            android:title="@string/profile" />

        <item
            android:enabled="false"
            android:id="@+id/nav_home" />

        <item
            android:id="@+id/nav_offers"
            android:icon="@drawable/offers_gray"
            android:title="@string/offers" />
        <item
            android:id="@+id/nav_others"
            android:icon="@drawable/ic_others"
            android:title="@string/others" />


    </group>
</menu>