<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <FrameLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_new_ticket"
            style="@style/item_title"/>

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="54dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@android:color/transparent"
            android:onClick="onBackClick"
            android:src="@drawable/back_button"
            tools:ignore="SpeakableTextPresentCheck" />
    </FrameLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/action_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/medium_dp">


            <ImageView
                android:layout_width="100dp"
                android:layout_height="110dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_client_ticket"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/medium_dp"
                android:gravity="center"
                android:padding="@dimen/small_dp"
                android:text="@string/subject"
                android:textSize="@dimen/tx_medium" />

            <TextView
                android:id="@+id/tv_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/my_account"
                android:layout_gravity="start"
                android:layout_marginHorizontal="@dimen/medium_dp"
                android:background="@drawable/rounded_corner_gray_solid"
                android:gravity="start"
                android:padding="@dimen/medium_padding"
                android:textSize="@dimen/tx_medium"
                app:drawableEndCompat="@drawable/ic_down_arrow" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/medium_dp"
                android:gravity="center"
                android:padding="@dimen/small_dp"
                android:text="@string/name"
                android:textSize="@dimen/tx_medium" />

            <EditText
                android:id="@+id/tv_edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_name"
                android:layout_gravity="start"
                android:layout_marginHorizontal="@dimen/medium_dp"
                android:background="@drawable/rounded_corner_gray_solid"
                android:gravity="start"
                android:padding="@dimen/medium_padding"
                android:textSize="@dimen/tx_medium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/medium_dp"
                android:gravity="center"
                android:padding="@dimen/small_dp"
                android:text="@string/mobile_number"
                android:textSize="@dimen/tx_medium" />

            <EditText
                android:id="@+id/tv_edit_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_phone_number"
                android:layout_gravity="start"
                android:layout_marginHorizontal="@dimen/medium_dp"
                android:background="@drawable/rounded_corner_gray_solid"
                android:gravity="start"
                android:inputType="phone"
                android:padding="@dimen/medium_padding"
                android:textSize="@dimen/tx_medium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/medium_dp"
                android:gravity="center"
                android:padding="@dimen/small_dp"
                android:text="@string/email"
                android:textSize="@dimen/tx_medium" />

            <EditText
                android:id="@+id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_mail"
                android:layout_gravity="start"
                android:layout_marginHorizontal="@dimen/medium_dp"
                android:background="@drawable/rounded_corner_gray_solid"
                android:gravity="start"
                android:inputType="textEmailAddress"
                android:padding="@dimen/medium_padding"
                android:textSize="@dimen/tx_medium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/medium_dp"
                android:gravity="center"
                android:padding="@dimen/small_dp"
                android:text="@string/message"
                android:textSize="@dimen/tx_medium" />

            <EditText
                android:id="@+id/tv_edit_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_message"
                android:layout_gravity="start"
                android:layout_marginHorizontal="@dimen/medium_dp"
                android:background="@drawable/rounded_corner_gray_solid"
                android:gravity="start"
                android:minHeight="150dp"
                android:padding="@dimen/small_dp"
                android:textSize="@dimen/tx_medium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/medium_dp"
                android:gravity="center"
                android:padding="@dimen/small_dp"
                android:text="@string/attach_attachment"
                android:textSize="@dimen/tx_medium" />

            <TextView
                android:id="@+id/et_id_pic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginHorizontal="@dimen/medium_dp"
                android:layout_marginTop="@dimen/small_margin"
                android:background="@drawable/rounded_corner_gray_solid"
                android:gravity="center"
                android:hint="@string/attach_image"
                android:padding="@dimen/medium_padding"
                android:textSize="@dimen/tx_medium"
                app:drawableStartCompat="@drawable/ic_baseline_camera_alt_24" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ticket_images"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="visible"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/list_item_ticket_image" />

            <Button
                android:id="@+id/btn_send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_dp"
                android:background="@drawable/rounded_orange_stroke"
                android:text="@string/send"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/tx_medium" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
