<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/medium_dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="160dp"
        android:gravity="center"
        android:padding="@dimen/small_dp"
        android:text="@string/mobile_number" />

    <EditText
        android:id="@+id/tv_edit_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner_gray_solid"
        android:backgroundTint="#D3D3D3"
        android:hint="@string/enter_phone_number"
        android:inputType="number"
        android:padding="@dimen/medium_padding"
        android:textSize="@dimen/tx_medium" />


    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:background="@drawable/rounded_orange_solid"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/tx_medium" />

</LinearLayout>
