<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_bank_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:text="@string/nameBank"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/tv_account_owner_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/account_owner_name"
            android:textSize="@dimen/tx_medium" />

        <TextView
            android:id="@+id/tv_iban_number"
            android:layout_width="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_height="wrap_content"
            android:text="@string/iban_num"
            android:textSize="@dimen/tx_medium" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="@color/gray" />
</LinearLayout>